# temperature-logging

./: .gitignore  README.md
api/: pyproject.toml
api/src/api/: dependencies.py  main.py
api/src/api/model/: config.py
api/src/api/routers/: measurements.py  statistics.py
api/src/api/serivce/: repository.py  storage.py
frontend/src/: App.js
frontend/src/components/: Navbar.js
storage/: entrypoint.sh  pyproject.toml  run.sh
storage/config/: local_config.json
storage/docker/: Dockerfile  build.sh
storage/src/storage/: main.py
storage/src/storage/model/: config.py  measurement.py
storage/src/storage/service/: database.py  redis.py  storage.py
thermometer/: entrypoint.sh  pyproject.toml  run.sh
thermometer/config/: local_config.json
thermometer/docker/: Dockerfile  build.sh
thermometer/src/thermometer/: main.py
thermometer/src/thermometer/model/: config.py  measurement.py
thermometer/src/thermometer/service/: measurement_service.py  redis_service.py
