[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Johannes Kohlmann <johannes.kohlmann@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
fastapi = "^0.75.0"
loguru = "^0.6.0"
uvicorn = "^0.17.6"
dataclasses-json = "^0.5.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
